--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
         "classnames": "^2.3.2",
         "date-fns": "^2.30.0",
         "gray-matter": "^4.0.2",
-        "next": "^12.3.1",
-        "next-pwa": "5.5.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-search-box": "^2.3.0",
-        "remark": "^14.0.2",
+        "next": "^13.5.4",
+        "@ducanh2912/next-pwa": "^9.7.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-search-box": "^3.0.0",
+        "remark": "^15.0.1",
         "remark-html": "^15.0.2",
         "string.prototype.replaceall": "^1.0.7",
         "sweetalert2": "^11.7.18",
@@ -25,7 +25,7 @@
     },
     "devDependencies": {
         "eslint-config-next": "^13.4.10",
-        "postcss": "^8.4.23",
+        "postcss": "^8.4.31",
         "eslint": "^8.39.0",
         "autoprefixer": "^10.4.14",
         "tailwindcss": "^3.3.2"
